hphp/hack/test/typecheck/interface_static_method.php.exp
File "interface_static_method.php", line 12, characters 19-19:
`B` is not an extendable class. (NastCheck[3072])
File "interface_static_method.php", line 17, characters 6-8:
Cannot call `C::foo()`; `foo` is not defined in `C` (Typing[4185])
File "interface_static_method.php", line 8, characters 26-28:
Declaration is here
